--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -20,12 +20,12 @@ jobs:
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r question_scraper/requirements.txt
           
       - name: execute python script 
         env: 
           COOKIE: ${{ secrets.COOKIE }}
-        run: python scraper.py
+        run: python question_scraper/scraper.py
           
       - name: commit files
         run: |
